--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 		"@typescript-eslint/eslint-plugin": "7.6.0",
 		"@typescript-eslint/parser": "7.6.0",
 		"@vitejs/plugin-react": "4.2.1",
-		"@vitest/coverage-istanbul": "1.5.0",
+		"@vitest/coverage-istanbul": "1.6.1",
 		"autoprefixer": "10.4.19",
 		"commitizen": "4.3.0",
 		"css-mediaquery": "0.1.2",
@@ -75,10 +75,10 @@
 		"stylelint-config-standard": "36.0.0",
 		"tailwindcss": "3.4.3",
 		"typescript": "5.4.5",
-		"vite": "5.2.8",
+		"vite": "5.4.12",
 		"vite-plugin-pwa": "0.19.8",
 		"vite-tsconfig-paths": "4.3.2",
-		"vitest": "1.5.0",
+		"vitest": "1.6.1",
 		"whatwg-fetch": "3.6.20",
 		"workbox-build": "7.0.0",
 		"workbox-window": "7.0.0"
@@ -100,7 +100,11 @@
 	},
 	"pnpm": {
 		"overrides": {
-			"headers-polyfill": "3.1.2"
+			"headers-polyfill": "3.1.2",
+			"micromatch@<4.0.8": ">=4.0.8",
+			"serialize-javascript@<6.0.2": ">=6.0.2",
+			"esbuild@<=0.24.2": ">=0.25.0"
 		}
-	}
+	},
+	"packageManager": "pnpm@8.10.0"
 }
